Bug 1253777 P1 Ensure buffered copying when reading body in service worker respondWith(). r=jdm a=ritu

MozReview-Commit-ID: LlFMXNSwq4A

--HG--
extra : source : afa617af671777931d07a6a881c45e61298c45fb